<resources>
    <string name="app_name">Test app</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_credentials">This email address or password invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="preference_user_key">user_key</string>
    <string name="title_activity_home_drawer">HomeDrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- String for Firebase FCM -->

    <string name="quickstart_message">Click the SUBSCRIBE TO NEWS button below to subscribe to the
        news topic. Messages sent to the news topic will be received. The LOG TOKEN button logs the
        InstanceID token to logcat.</string>
    <string name="subscribe_to_news">Subscribe To News</string>
    <string name="log_token">Log Token</string>

    <string name="msg_subscribed">Subscribed to news topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <string name="default_notification_channel_name" translatable="true">News</string>
    <string name="user_create_account">Do your not have a user? Create Account</string>
    <string name="action_register">Register</string>
    <string name="sign_in_account">Did you already register? Sign in</string>
    <string name="log_out">Log out</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_email_message">Please check your email and verify your email address and go back
        Thanks!
    </string>

    <!-- Facebook -->
    <string name="facebook_app_id">1215748581900881</string>
    <string name="fb_login_protocol_scheme">fb1215748581900881</string>
    <string name="confirm_logout_message">Do you really want to log out?</string>
    <string name="profession_name">Profession_name</string>
    <string name="profession_description">Profession_description</string>
    <string name="consumo_actual">Consumo actual:</string>
    <string name="lecture_date">Date</string>
    <string name="lecture_time">Lecture time</string>
    <string name="title_activity_maps">Map</string>
</resources>
